PME OpenCL 3D FFT transform is implemented, using clFFT
This is not yet used but already compiled.

Refs #2536

Change-Id: I49d47ce1ca2bfe75759e757259371289a18a584c

--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -54,8 +54,8 @@ if (GMX_USE_CUDA)
     gmx_add_libgromacs_sources(
         # CUDA-specific sources
         pme.cu
-        pme-3dfft.cu
         pme-gather.cu
+        pme-gpu-3dfft.cu
         pme-solve.cu
         pme-spread.cu
         pme-gpu-program-impl.cu
@@ -67,6 +67,13 @@ if (GMX_USE_CUDA)
     gmx_compile_cpp_as_cuda(
         pme-gpu-internal.cpp
         pme-gpu-timings.cpp
+        )
+elseif (GMX_USE_OPENCL)
+    gmx_add_libgromacs_sources(
+        # OpenCL-specific sources
+        pme-gpu-3dfft-ocl.cpp
+        # Files that implement stubs
+        pme-gpu-program-impl.cpp
         )
 else()
     gmx_add_libgromacs_sources(
