--- a/src/gromacs/tools/tests/CMakeLists.txt
+++ b/src/gromacs/tools/tests/CMakeLists.txt
@@ -32,9 +32,6 @@
 # To help us fund GROMACS development, we humbly ask that you cite
 # the research papers on the package. Check out http://www.gromacs.org.
 
-file(GLOB TOOLS_SOURCES *.cpp)
-set(LIBGROMACS_SOURCES ${LIBGROMACS_SOURCES} ${TOOLS_SOURCES} PARENT_SCOPE)
+gmx_add_unit_test(ToolUnitTests tool-test
+                  report.cpp)
 
-if (BUILD_TESTING)
-    add_subdirectory(tests)
-endif()
