Add update groups
Adds functionality for detecting update groups and tests.
Update groups are group that can be updated independently,
i.e. vsite are constructed from atoms with the group and constraints
only act on atoms within the group.
The functionality is not used yet.

Change-Id: I958983bc9010999cc7ce33b26daf587eda632c36

--- a/src/gromacs/mdlib/tests/CMakeLists.txt
+++ b/src/gromacs/mdlib/tests/CMakeLists.txt
@@ -37,4 +37,5 @@ gmx_add_unit_test(MdlibUnitTest mdlib-test
                   mdebin.cpp
                   settle.cpp
                   shake.cpp
-                  simulationsignal.cpp)
+                  simulationsignal.cpp
+                  updategroups.cpp)
