--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -71,6 +71,10 @@ elseif (GMX_USE_OPENCL)
     gmx_add_libgromacs_sources(
         # OpenCL-specific sources
         pme-gpu-3dfft-ocl.cpp
+        # GPU-specific sources
+        pme-gpu.cpp
+        pme-gpu-internal.cpp
+        pme-gpu-timings.cpp
         # Files that implement stubs
         pme-gpu-program-impl.cpp
         )
