RFC: clang-tidy: Enable bugprone-integer-division
Should this be enabled?
Pro: It seems to catch real errors. Makes code more readable.
     (I'm not sure I have fixed all the correct way which means
      the code was hard to read before)
Cons: It has some false postives

If so how do we want to mark attentional int divisions?
(int)(a/b)            #in this patch
static_cast<int>(a/b) #style guide but kind of long for this purpose
int_div(a,b)          #new function for this purpose

Change-Id: Ieaeedd4558865a9dd541d24cf246f5c5733e87a1

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -233,7 +233,7 @@ if (GMX_CLANG_TIDY)
    if(CMAKE_VERSION VERSION_LESS "3.6")
        message(ERROR "clang-tidy support requires cmake 3.6.")
    endif()
-   set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE};--checks=-clang-analyzer-security.insecureAPI.strcpy,-clang-analyzer-core.NullDereference,bugprone-*,-bugprone-integer-division;-warnings-as-errors=*")
+   set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE};--checks=-clang-analyzer-security.insecureAPI.strcpy,-clang-analyzer-core.NullDereference,bugprone-*;-warnings-as-errors=*")
 endif()
 
 gmx_write_installed_header_list()
