Remove hardcoded warp_size == 32 assumption from PME GPU
The PME OpenCL host code now queries the warp_size aka max
execution width from the device. The CUDA/unit test handling
of constants/defines is adjusted. With this, only the PME
device-side code should be relying on warp_size define
(which will be passed to the compiler in the OpenCL
implementation).

Change-Id: Ic2d1512e04d36861590b13e02b5bd7a87240f9e2

--- a/src/gromacs/ewald/CMakeLists.txt
+++ b/src/gromacs/ewald/CMakeLists.txt
@@ -71,12 +71,11 @@ elseif (GMX_USE_OPENCL)
     gmx_add_libgromacs_sources(
         # OpenCL-specific sources
         pme-gpu-3dfft-ocl.cpp
+        pme-gpu-program-impl-ocl.cpp
         # GPU-specific sources
         pme-gpu.cpp
         pme-gpu-internal.cpp
         pme-gpu-timings.cpp
-        # Files that implement stubs
-        pme-gpu-program-impl.cpp
         )
 else()
     gmx_add_libgromacs_sources(
