Prefer linking to system clFFT rather than bundled one
On Ubuntu 16+, libclfft2-dev package is required.

Ref #2500

Change-Id: If43ee95d3066823f2c57a49a23fd6dd027dbcc94

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -194,13 +194,14 @@ else()
     add_library(libgromacs ${LIBGROMACS_SOURCES})
 endif()
 
-# TODO: installed clFFT should be preferred, if possible;
-# src/external/src/clFFT/FindclFFT.cmake should help with that.
-# Redmine issue #2500
 set(CLFFT_LIBRARIES "")
 if (GMX_USE_OPENCL)
-    add_subdirectory(../external/clFFT/src "${CMAKE_CURRENT_BINARY_DIR}/clFFT-build")
-    set(CLFFT_LIBRARIES "clFFT")
+    include (../external/clFFT/src/FindclFFT.cmake)
+    if (NOT CLFFT_FOUND)
+        # building own static clFFT copy
+        add_subdirectory(../external/clFFT/src "${CMAKE_CURRENT_BINARY_DIR}/clFFT-build")
+        set(CLFFT_LIBRARIES "clFFT")
+    endif()
 endif()
 
 # Recent versions of gcc and clang give warnings on scanner.cpp, which
