RFC: Fix clfft for BUILD_SHARED_LIBS=no
Fixes the issue but I don't know whether it is
the fix we want.

Change-Id: I9f409f76a4a143c10a08387e86732f4d414ae59f

--- a/src/external/clFFT/src/CMakeLists.txt
+++ b/src/external/clFFT/src/CMakeLists.txt
@@ -12,3 +12,4 @@ set_source_files_properties(${CLFFT_SOURCES} PROPERTIES COMPILE_FLAGS "${COMPILE
 add_library(clFFT STATIC ${CLFFT_SOURCES})
 target_include_directories(clFFT PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set_property(TARGET clFFT PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_link_libraries(clFFT PRIVATE "dl")
