Move vectype_ops.clh into gpu_utils
OpenCL compilation now uses gpu_utils as an include directory in source.
All the OpenCL sources are still installed into one directory.

Change-Id: Ib8f4b441867b685d774202319a7d54fd085d1a9b

--- a/src/gromacs/gpu_utils/CMakeLists.txt
+++ b/src/gromacs/gpu_utils/CMakeLists.txt
@@ -56,6 +56,11 @@ else()
         )
 endif()
 
+if(GMX_USE_OPENCL)
+    file(GLOB OPENCL_COMMON_HEADERS vectype_ops.clh)
+    set(MDLIB_OPENCL_KERNELS ${MDLIB_OPENCL_KERNELS} ${OPENCL_COMMON_HEADERS} PARENT_SCOPE)
+endif()
+
 # workaround for the state - host allocator dependency
 gmx_install_headers(hostallocator.h)
 
