Move out OpenCL device utils from vectype ops
The vectype_ops.clh contained misplaced device functions that did not
really implement vector-type operations. These are now moved to a
separate general-purpose device-side OpenCL utils header.

Change-Id: I225260e0fc63fbb144a30f2efecdb8adb7d20100

--- a/src/gromacs/gpu_utils/CMakeLists.txt
+++ b/src/gromacs/gpu_utils/CMakeLists.txt
@@ -57,7 +57,10 @@ else()
 endif()
 
 if(GMX_USE_OPENCL)
-    file(GLOB OPENCL_COMMON_HEADERS vectype_ops.clh)
+    file(GLOB OPENCL_COMMON_HEADERS
+            vectype_ops.clh
+            device_utils.clh
+        )
     set(MDLIB_OPENCL_KERNELS ${MDLIB_OPENCL_KERNELS} ${OPENCL_COMMON_HEADERS} PARENT_SCOPE)
 endif()
 
