updates, coul integrals, cln library, slater_max 5, bug fixing
Change-Id: I7502ac1e24742c5d42e42b67045ce310f6a56a00

--- a/src/gromacs/coulombintegrals/CMakeLists.txt
+++ b/src/gromacs/coulombintegrals/CMakeLists.txt
@@ -37,42 +37,42 @@ file(GLOB COULOMBINTEGRALS_SOURCES
           DSlater_1S_2S.cpp
           DSlater_1S_3S.cpp
           DSlater_1S_4S.cpp
-          #DSlater_1S_5S.cpp
+          DSlater_1S_5S.cpp
           #DSlater_1S_6S.cpp
           DSlater_2S_2S.cpp
           DSlater_2S_3S.cpp
           DSlater_2S_4S.cpp
-          #DSlater_2S_5S.cpp
+          DSlater_2S_5S.cpp
           #DSlater_2S_6S.cpp
           DSlater_3S_3S.cpp
           DSlater_3S_4S.cpp
-          #DSlater_3S_5S.cpp
+          DSlater_3S_5S.cpp
           #DSlater_3S_6S.cpp
           DSlater_4S_4S.cpp
-          #DSlater_4S_5S.cpp
+          DSlater_4S_5S.cpp
           #DSlater_4S_6S.cpp
-          #DSlater_5S_5S.cpp
+          DSlater_5S_5S.cpp
           #DSlater_5S_6S.cpp
           #DSlater_6S_6S.cpp
           Slater_1S_1S.cpp
           Slater_1S_2S.cpp
           Slater_1S_3S.cpp
           Slater_1S_4S.cpp
-          #Slater_1S_5S.cpp
+          Slater_1S_5S.cpp
           #Slater_1S_6S.cpp
           Slater_2S_2S.cpp
           Slater_2S_3S.cpp
           Slater_2S_4S.cpp
-          #Slater_2S_5S.cpp
+          Slater_2S_5S.cpp
           #Slater_2S_6S.cpp
           Slater_3S_3S.cpp
           Slater_3S_4S.cpp
-          #Slater_3S_5S.cpp
+          Slater_3S_5S.cpp
           #Slater_3S_6S.cpp
           Slater_4S_4S.cpp
-          #Slater_4S_5S.cpp
+          Slater_4S_5S.cpp
           #Slater_4S_6S.cpp
-          #Slater_5S_5S.cpp
+          Slater_5S_5S.cpp
           #Slater_5S_6S.cpp
           #Slater_6S_6S.cpp
           gaussian_integrals.c
