Split TopologyInformation into its own header
This will help provide a useful upgrade path for tools to get away
from t_topology, and eventually into the new framework.

Introduced a builder function to fill TopologyInformation from a tpr
file, which will be needed shortly for porting old tools.

Refs #1862

Change-Id: If2594cdcd3f9817ff83e7fb73208cdb5c497bb1a

--- a/src/gromacs/trajectoryanalysis/CMakeLists.txt
+++ b/src/gromacs/trajectoryanalysis/CMakeLists.txt
@@ -39,6 +39,7 @@ gmx_install_headers(
     analysismodule.h
     analysissettings.h
     cmdlinerunner.h
+    topologyinformation.h
     )
 
 if (BUILD_TESTING)
