[WIP] Fix clang CUDA build
Not sure what the real problem is, but this cmake that can't
crash when LIBGROMACS_SOURCES happens to be empty.

Change-Id: I27c6c3c5e0a061482b456bd3c04908e918d6de9f

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -178,7 +178,7 @@ if (GMX_CLANG_CUDA)
     foreach (_file ${LIBGROMACS_SOURCES})
         get_filename_component(_ext ${_file} EXT)
         get_source_file_property(_cuda_source_format ${_file} CUDA_SOURCE_PROPERTY_FORMAT)
-        if (${_ext} STREQUAL ".cu" OR _cuda_source_format)
+        if ("${_ext}" STREQUAL ".cu" OR _cuda_source_format)
             gmx_compile_cuda_file_with_clang(${_file})
         endif()
     endforeach()
