clang-tidy: performance-type-promotion-in-math-fn
Change-Id: I7cca74e0c280c564f7a71cc1a68a5402172eefd1

--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -284,10 +284,10 @@ if (GMX_CLANG_TIDY)
        -readability-misleading-indentation,-readability-container-size-empty,-misc-suspicious-string-compare,\
        -readability-redundant-control-flow,-performance-unnecessary-value-param,\
        -readability-static-definition-in-anonymous-namespace,-misc-suspicious-missing-comma,\
-       -readability-redundant-member-init,-misc-misplaced-const,-performance-type-promotion-in-math-fn,\
+       -readability-redundant-member-init,-misc-misplaced-const,\
        -misc-incorrect-roundings,-misc-macro-parentheses,-readability-function-size,-readability-else-after-return,\
        -readability-inconsistent-declaration-parameter-name,-misc-throw-by-value-catch-by-reference,\
-       -readability-non-const-parameter,-readability-implicit-bool-conversion;-warnings-as-errors=*")
+       -readability-non-const-parameter,-readability-implicit-bool-conversion;-warnings-as-errors=*;-fix")
 endif()
 
 gmx_write_installed_header_list()
