--- a/src/gromacs/CMakeLists.txt
+++ b/src/gromacs/CMakeLists.txt
@@ -279,15 +279,14 @@ if (GMX_CLANG_TIDY)
    set_target_properties(libgromacs PROPERTIES CXX_CLANG_TIDY "${CLANG_TIDY_EXE};--checks=\
        -clang-analyzer-security.insecureAPI.strcpy,-clang-analyzer-core.NullDereference,\
        bugprone-*,misc-*,readability-*,performance-*,mpi-*,-bugprone-integer-division,\
-       -readability-redundant-smartptr-get,-readability-redundant-string-cstr,-readability-simplify-boolean-expr,\
        -misc-misplaced-widening-cast,-readability-named-parameter,-performance-noexcept-move-constructor,\
-       -readability-misleading-indentation,-readability-container-size-empty,-misc-suspicious-string-compare,\
+       -readability-misleading-indentation,-misc-suspicious-string-compare,\
        -readability-redundant-control-flow,-performance-unnecessary-value-param,\
        -readability-static-definition-in-anonymous-namespace,-misc-suspicious-missing-comma,\
        -readability-redundant-member-init,-misc-misplaced-const,-performance-type-promotion-in-math-fn,\
        -misc-incorrect-roundings,-misc-macro-parentheses,-readability-function-size,-readability-else-after-return,\
        -readability-inconsistent-declaration-parameter-name,-misc-throw-by-value-catch-by-reference,\
-       -readability-non-const-parameter,-readability-implicit-bool-conversion;-warnings-as-errors=*")
+       -readability-non-const-parameter,-readability-implicit-bool-conversion;-warnings-as-errors=*;-fix")
 endif()
 
 gmx_write_installed_header_list()
